--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+
+    //Firebase Crashlytics Dependency
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
+    //Firebase Admob Dependency
     implementation 'com.google.firebase:firebase-ads:17.0.0'
 }
