--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'io.fabric'
 
 android {
     signingConfigs {
@@ -44,4 +45,8 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
     //Firebase Admob Dependency
     implementation 'com.google.firebase:firebase-ads:17.0.0'
+    //Firebase Core Dependency
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+
 }
+
