--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -33,8 +33,12 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = "1.1.1"
+    def appcompat_version = "28.0.0"
+    def room_version = "1.1.1"
+
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "com.android.support:appcompat-v7:${appcompat_version}"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -47,6 +51,25 @@ dependencies {
     implementation 'com.google.firebase:firebase-ads:17.0.0'
     //Firebase Core Dependency
     implementation 'com.google.firebase:firebase-core:16.0.4'
+
+
+
+
+    // ViewModel and LiveData Dependencies
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    //Room Dependency
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+
+    //Glide Dependency
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    //CardView Dependency
+    implementation "com.android.support:cardview-v7:$appcompat_version"
+
+    //Recyclerview Dependency
+    implementation "com.android.support:cardview-v7:$appcompat_version"
 
 }
 
