--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -70,5 +70,9 @@ dependencies {
     //Material Component Dependency
     implementation 'com.google.android.material:material:1.0.0'
 
+    //Parceler Dependency
+    api 'org.parceler:parceler-api:1.1.11'
+    annotationProcessor 'org.parceler:parceler:1.1.11'
+
 
 }
