--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -31,7 +31,17 @@
         </activity>
         <activity android:name=".ui_controller.task.UpdateTaskActivity" />
         <activity android:name=".ui_controller.list.UpdateListActivity" />
-        <activity android:name=".ui_controller.list.NewListActivity"></activity>
+        <activity android:name=".ui_controller.list.NewListActivity" />
+
+        <receiver android:name=".MyGoalsWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/my_goals_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
