--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -33,7 +33,7 @@ android {
 }
 
 dependencies {
-    def lifecycle_version = "1.1.1"
+    def lifecycle_version = "2.0.0"
     def appcompat_version = "1.0.1"
     def room_version = "2.0.0"
     def constraint_layout_version = "1.1.0"
@@ -53,7 +53,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.4'
 
     // ViewModel and LiveData Dependencies
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
     //Room Dependency
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
