--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -74,5 +74,6 @@ dependencies {
     implementation 'com.facebook.stetho:stetho:1.5.0'
 
     implementation project(':roomlib')
+    implementation project(':loginlib')
 
 }
