--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -14,7 +14,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.udafil.dhruvamsharma.udacity_capstone"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -35,6 +35,7 @@ android {
 dependencies {
     def appcompat_version = "1.0.1"
     def constraint_layout_version = "1.1.0"
+    def lottieVersion = "2.8.0"
 
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "androidx.appcompat:appcompat:$appcompat_version"
@@ -75,5 +76,7 @@ dependencies {
 
     implementation project(':roomlib')
     implementation project(':loginlib')
+
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
 }
