--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
+    implementation 'androidx.appcompat:appcompat:1.0.0-alpha1'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
@@ -50,8 +52,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-ads:17.0.0'
     //Firebase Core Dependency
     implementation 'com.google.firebase:firebase-core:16.0.4'
-
-
 
     //Glide Dependency
     implementation 'com.github.bumptech.glide:glide:4.8.0'
@@ -69,7 +69,6 @@ dependencies {
     //Parceler Dependency
     api 'org.parceler:parceler-api:1.1.11'
     annotationProcessor 'org.parceler:parceler:1.1.11'
-
 
     //Stetho Dependency
     implementation 'com.facebook.stetho:stetho:1.5.0'
