--- a/AndroidProject/app/src/main/AndroidManifest.xml
+++ b/AndroidProject/app/src/main/AndroidManifest.xml
@@ -22,18 +22,12 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
-        <activity android:name=".ui_controller.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".ui_controller.MainActivity"/>
         <activity android:name=".ui_controller.task.UpdateTaskActivity" />
         <activity android:name=".ui_controller.list.UpdateListActivity" />
         <activity android:name=".ui_controller.list.NewListActivity" />
 
-        <receiver android:name=".MyGoalsWidget">
+        <receiver android:name=".ui_controller.widget.MyGoalsWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
@@ -42,6 +36,14 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/my_goals_widget_info" />
         </receiver>
+
+        <activity android:name=".ui_controller.SplashScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
