Task 7: Added First Time Setup Module. Code Refactored

--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     implementation project(':roomlib')
     implementation project(':loginlib')
     implementation project(':pointslib')
+    implementation project(':firstentrymodule')
 
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
