Task 7: Image Drawables for Intro Library Added

--- a/AndroidProject/firstentrymodule/src/main/AndroidManifest.xml
+++ b/AndroidProject/firstentrymodule/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.onearticleoneweek.wahadatkashmiri.firstentrymodule">
 
     <application>
-        <activity android:name=".FirstTimeInstallActivivity"></activity>
+        <activity android:name=".FirstTimeInstallActivivity" />
     </application>
 
 </manifest>
