--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -8,7 +8,7 @@ android {
             keyAlias 'chalorebels'
             keyPassword 'chalorebels'
             storePassword 'chalorebels'
-            storeFile file("${rootDir}/keystores/Untitled.keystore")
+            storeFile file('keystore/debug.keystore')
         }
     }
     compileSdkVersion 28
@@ -23,12 +23,10 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
         }
-    }
-    productFlavors {
     }
 }
 
@@ -36,7 +34,6 @@ dependencies {
     def appcompat_version = "1.0.1"
     def constraint_layout_version = "1.1.0"
     def lottieVersion = "2.8.0"
-
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.constraintlayout:constraintlayout:$constraint_layout_version"
@@ -45,39 +42,29 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-
     //Firebase Crashlytics Dependency
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
     //Firebase Admob Dependency
     implementation 'com.google.firebase:firebase-ads:17.0.0'
     //Firebase Core Dependency
     implementation 'com.google.firebase:firebase-core:16.0.4'
-
     //Glide Dependency
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-
     //CardView Dependency
     implementation 'androidx.cardview:cardview:1.0.0'
-
     //Recyclerview Dependency
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-
     //Material Component Dependency
     implementation 'com.google.android.material:material:1.0.0'
-
     //Parceler Dependency
     api 'org.parceler:parceler-api:1.1.11'
     annotationProcessor 'org.parceler:parceler:1.1.11'
-
     //Stetho Dependency
     implementation 'com.facebook.stetho:stetho:1.5.0'
-
     implementation project(':roomlib')
     implementation project(':loginlib')
     implementation project(':pointslib')
     implementation project(':firstentrymodule')
-
     implementation "com.airbnb.android:lottie:$lottieVersion"
-
 }
