Task 7: Beautification of intro module done

--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -67,4 +67,7 @@ dependencies {
     implementation project(':pointslib')
     implementation project(':firstentrymodule')
     implementation "com.airbnb.android:lottie:$lottieVersion"
+
+    //Intro Screen Dependency
+    implementation 'com.github.paolorotolo:appintro:v5.1.0'
 }
