Task 7: Release Task Added. Some very minor UI Changes

--- a/AndroidProject/app/build.gradle
+++ b/AndroidProject/app/build.gradle
@@ -8,7 +8,7 @@ android {
             keyAlias 'chalorebels'
             keyPassword 'chalorebels'
             storePassword 'chalorebels'
-            storeFile file('keystore/debug.keystore')
+            storeFile file('keystore/keystore')
         }
     }
     compileSdkVersion 28
